--- a/meta-rcar-gen3-adas/docs/sample/conf/condor/poky-gcc/bsp/bblayers.conf
+++ b/meta-rcar-gen3-adas/docs/sample/conf/condor/poky-gcc/bsp/bblayers.conf
@@ -13,4 +13,5 @@ BBLAYERS ?= " \
   ${TOPDIR}/../meta-openembedded/meta-oe \
   ${TOPDIR}/../meta-openembedded/meta-python \
   ${TOPDIR}/../meta-openembedded/meta-networking \
+  ${TOPDIR}/../meta-rcar/meta-rcar-gen3-adas \
   "
