--- a/meta-rcar-gen3-adas/docs/sample/conf/v3msk/poky-gcc/bsp/bblayers.conf
+++ b/meta-rcar-gen3-adas/docs/sample/conf/v3msk/poky-gcc/bsp/bblayers.conf
@@ -14,4 +14,5 @@ BBLAYERS ?= " \
   ${TOPDIR}/../meta-linaro/meta-optee \
   ${TOPDIR}/../meta-openembedded/meta-python \
   ${TOPDIR}/../meta-openembedded/meta-networking \
+  ${TOPDIR}/../meta-rcar/meta-rcar-gen3-adas \
   "
