--- a/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/disable-unused.cfg
+++ b/meta-rcar-gen3-adas/recipes-kernel/linux/linux-renesas/disable-unused.cfg
@@ -1,3 +1,4 @@
+# CONFIG_ARCH_AGILEX is not set
 # CONFIG_ARCH_SUNXI is not set
 # CONFIG_ARCH_ALPINE is not set
 # CONFIG_ARCH_BCM2835 is not set
@@ -5,16 +6,19 @@
 # CONFIG_ARCH_BERLIN is not set
 # CONFIG_ARCH_BRCMSTB is not set
 # CONFIG_ARCH_EXYNOS is not set
+# CONFIG_ARCH_K3 is not set
 # CONFIG_ARCH_LAYERSCAPE is not set
 # CONFIG_ARCH_LG1K is not set
 # CONFIG_ARCH_HISI is not set
 # CONFIG_ARCH_MEDIATEK is not set
 # CONFIG_ARCH_MESON is not set
 # CONFIG_ARCH_MVEBU is not set
+# CONFIG_ARCH_MXC is not set
 # CONFIG_ARCH_QCOM is not set
 # CONFIG_ARCH_ROCKCHIP is not set
 # CONFIG_ARCH_SEATTLE is not set
 # CONFIG_ARCH_STRATIX10 is not set
+# CONFIG_ARCH_SYNQUACER is not set
 # CONFIG_ARCH_TEGRA is not set
 # CONFIG_ARCH_SPRD is not set
 # CONFIG_ARCH_THUNDER is not set
@@ -24,10 +28,3 @@
 # CONFIG_ARCH_XGENE is not set
 # CONFIG_ARCH_ZX is not set
 # CONFIG_ARCH_ZYNQMP is not set
-# CONFIG_SUNXI_SRAM is not set
-# CONFIG_RESET_BERLIN is not set
-# CONFIG_RESET_MESON is not set
-# CONFIG_RESET_SOCFPGA is not set
-# CONFIG_RESET_SUNXI is not set
-# CONFIG_RESET_TEGRA_BPMP is not set
-# CONFIG_MESON_SM is not set
